fix mobile overflow

--- a/app/assets/stylesheets/genres.scss
+++ b/app/assets/stylesheets/genres.scss
@@ -587,7 +587,7 @@
       font-size: 12px;
     }
     .long-link {
-      font-size: 11px !important;
+      font-size: 10.5px !important;
       // white-space: normal !important;
     }
   }
